# ROMFetch

./: .gitmodules  Build.bat  CMakeLists.txt  README.md  RomList.txt  build-GUI.bat
Update/: Update.bat
include/: PLACEHOLD.txt
metadata/: RomList.txt
src/ROMFetch-Core/: RomFetchCore.cpp  RomFetchCore.h
src/ROMFetch-GUI/: ROMFetchGui.cpp
src/ROMFetch-TERMINAL/: ROMFetch.cpp
